# senergy-notify-mn

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_usage.py
src/notify_mn/: __init__.py  config.py  error_policy.py  exceptions.py  manager.py  models.py  retry.py  templates.py
src/notify_mn/providers/: __init__.py  fcm.py
src/notify_mn/repositories/: __init__.py  base.py  device_tokens.py  notification_logs.py
src/notify_mn/services/: notification_service.py
tests/: test_manager.py
